--- a/src/components/index.html
+++ b/src/components/index.html
@@ -75,7 +75,7 @@
 
 <body>
     <div id="carousel-container" class="full-page-section">
-            <h1 class="Title">游戏demo展示</h1>
+            <h1>游戏demo展示</h1>
         <!-- 左侧按钮 -->
         <button class="carousel-btn left" @click="prev">←</button>
         <!-- 图片容器 -->
@@ -143,7 +143,7 @@
     </div>
 
     <div class="full-page-section">
-            <h1 class="Title">前端网页设计展示</h1>
+            <h1>前端网页设计展示</h1>
         <p style="text-align: center">
             <img src="../assets/qd1.png" width="80%" height=auto alt="前端网页设计展示" onclick="gotTocsPage()">
         </p>
@@ -156,7 +156,7 @@
     </div>
 
     <div class="full-page-section">
-            <h1 class="Title">个人简历</h1>
+            <h1>个人简历</h1>
         <input type="text" placeholder="请输入密码" id="password">
         <script>
             function checkPassword() {
