--- a/public/components/index.html
+++ b/public/components/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/components/index.css">
+    <link rel="stylesheet" type="text/css" href="index1.css">
     <style type="text/css">
         /* 容器修改：自适应浏览器宽度 */
         #mask {
