--- a/components/index.html
+++ b/components/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.14/vue.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/components/index1.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <style type="text/css">
         /* 容器修改：自适应浏览器宽度 */
         #mask {
@@ -91,13 +91,13 @@
             el: '#carousel-container',
             data: {
                 imgArr: [
-                    "/assets/1.png",
-                    "/assets/2.png",
-                    "/assets/3.png",
-                    "/assets/4.png",
-                    "/assets/5.png",
-                    "/assets/6.png",
-                    "/assets/7.png",
+                    "../assets/1.png",
+                    "../assets/2.png",
+                    "../assets/3.png",
+                    "../assets/4.png",
+                    "../assets/5.png",
+                    "../assets/6.png",
+                    "../assets/7.png",
                 ],
                 index: 0,
                 timer: null
@@ -130,7 +130,7 @@
                 },
                 gotoNewPage: function () {
                     index = this.index;
-                    const targetPage = `/components/${index + 1}.html`;
+                    const targetPage = `../components/${index + 1}.html`;
                     window.location.href = targetPage;
                 }
             },
@@ -153,41 +153,6 @@
                 window.open("https://iotest-beige.vercel.app/");
             }
         </script>
-    </div>
-
-    <div class="full-page-section">
-        <h1>个人简历</h1>
-        <input type="text" placeholder="请输入密码" id="password">
-        <script>
-            function checkPassword() {
-                // 1. 先获取密码输入框的 DOM 元素，并存储在变量中
-                const passwordInput = document.getElementById("password");
-                // 2. 再从这个元素中获取输入的密码值
-                const password = passwordInput.value;
-                if (password === "1108") {
-                    alert("密码正确，开始下载...");
-                    // 1. 创建一个 <a> 标签
-                    const link = document.createElement('a');
-                    // 2. 设置文件的下载地址和文件名
-                    link.href = '../assets/jl.pdf'; // 你的文件路径
-                    link.download = '个人简历.pdf'; // 下载时显示的文件名 (可选)
-                    // 3. 将 <a> 标签添加到页面中（某些浏览器需要这一步）
-                    document.body.appendChild(link);
-                    // 4. 触发 <a> 标签的点击事件，开始下载
-                    link.click();
-                    // 5. 下载开始后，从页面中移除这个 <a> 标签
-                    document.body.removeChild(link);
-                    passwordInput.focus();
-
-                } else {
-                    alert("密码错误");
-                    passwordInput.value = "";
-                    passwordInput.focus();
-                }
-            }
-        </script>
-        <br>
-        <button onclick="checkPassword()">点击下载</button>
     </div>
 
     <div class="lastPage">
